--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
 version: '3.8'
-
 services:
   jenkins:
-    build: .
-    container_name: jenkins
+    image: jenkins/jenkins:lts
+    container_name: jenkins-docker
     ports:
       - "8080:8080"
       - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
       - //var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
+    user: root
 
 volumes:
   jenkins_home:
